8327213: [lworld] Valhalla runtime testing move to classfile API